WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
278627
[Cleanup] margin-trim does not apply to float boxes
https://bugs.webkit.org/show_bug.cgi?id=278627
Summary
[Cleanup] margin-trim does not apply to float boxes
alan
Reported
2024-08-25 12:42:18 PDT
ssia
Attachments
[fast-cq]Patch
(3.64 KB, patch)
2024-08-25 12:43 PDT
,
alan
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
alan
Comment 1
2024-08-25 12:43:37 PDT
Created
attachment 472289
[details]
[fast-cq]Patch
EWS
Comment 2
2024-08-26 07:08:09 PDT
Committed
282728@main
(155b6eb64d2b): <
https://commits.webkit.org/282728@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 472289
[details]
.
Radar WebKit Bug Importer
Comment 3
2024-08-26 07:09:13 PDT
<
rdar://problem/134699486
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug