[Cleanup] margin-trim does not apply to float boxes https://bugs.webkit.org/show_bug.cgi?id=278627

Reviewed by Antti Koivisto.

Remove float related margin trim code (leftover code added based on the initial version of margin-trim).

* Source/WebCore/layout/formattingContexts/inline/InlineLineBuilder.cpp:
(WebCore::Layout::LineBuilder::tryPlacingFloatBox):
* Source/WebCore/rendering/RenderBox.cpp:
(WebCore::RenderBox::computeInlineDirectionMargins const):

Canonical link: https://commits.webkit.org/282728@main